added list, picture, paragraph

--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
   <body>
      <h1>Hello World!</h1>
      <script src="script.js"></script>
+    <p>I recently got a new puppy, and I can't decide on a name</p>
+    <img
+  src="https://www.google.com/imgres?imgurl=https%3A%2F%2Flookaside.fbsbx.com%2Flookaside%2Fcrawler%2Fmedia%2F%3Fmedia_id%3D2657185991200903&tbnid=ROnSb857TtkXJM&vet=12ahUKEwi8n9SmjJj-AhUrD1kFHZnvATwQMygEegUIARCsAQ..i&imgrefurl=https%3A%2F%2Fwww.facebook.com%2F1658729544379891%2Fposts%2Fred-tri-dilute-malepearl-and-remington-litterestimated-15-18ckc-registration-val%2F2657191481200354%2F&docid=ddf4peLKOeFXWM&w=1944&h=1296&q=dilute%20red%20tri%20aussie&ved=2ahUKEwi8n9SmjJj-AhUrD1kFHZnvATwQMygEegUIARCsAQ"
+  width="200"
+  alt="What my puppy looks like"
+/>
+     <h3><em>Possible Names</em></h3>   
+        <ul>
+            <li>San</li>
+            <li>Ada</li>
+            <li>Dandy</li>
+            <li>Daisy</li>
+        </ul>
   </body>
 </html>
